// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DayRow day row starts on Monday or Saturday 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ --- --- @@
-     Monday, March 18
+     Saturday, March 16
@@ --- --- @@
-             18
+             16
@@ --- --- @@
-             Mon
+             Sat
@@ --- --- @@
-             19
+             17
@@ --- --- @@
-             Tue
+             Sun
@@ --- --- @@
-             20
+             18
@@ --- --- @@
-             Wed
+             Mon
@@ --- --- @@
-             21
+             19
@@ --- --- @@
-             Thu
+             Tue
@@ --- --- @@
-             22
+             20
@@ --- --- @@
-             Fri
+             Wed
@@ --- --- @@
-             23
+             21
@@ --- --- @@
-             Sat
+             Thu
@@ --- --- @@
-             24
+             22
@@ --- --- @@
-             Sun
+             Fri
`;

exports[`DayRow day row starts on Monday or Sunday 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ --- --- @@
-     Monday, March 18
+     Sunday, March 17
@@ --- --- @@
-             18
+             17
@@ --- --- @@
-             Mon
+             Sun
@@ --- --- @@
-             19
+             18
@@ --- --- @@
-             Tue
+             Mon
@@ --- --- @@
-             20
+             19
@@ --- --- @@
-             Wed
+             Tue
@@ --- --- @@
-             21
+             20
@@ --- --- @@
-             Thu
+             Wed
@@ --- --- @@
-             22
+             21
@@ --- --- @@
-             Fri
+             Thu
@@ --- --- @@
-             23
+             22
@@ --- --- @@
-             Sat
+             Fri
@@ --- --- @@
-             24
+             23
@@ --- --- @@
-             Sun
+             Sat
`;
